--- a/CarmenSanDiegoWicket/src/main/java/ui/HomePage.html
+++ b/CarmenSanDiegoWicket/src/main/java/ui/HomePage.html
@@ -1,76 +1,68 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
-<head>
-<meta charset="utf-8" />
-<title>¿Dónde está Carmen San Diego?</title>
-<link rel="shortcut icon" href="images/iconoCarmenSanDiego.png"
-	type="image/png" />
-<!-- Bootstrap -->
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
-<link rel="stylesheet" type="text/css"
-	href="stylesheets/bootstrap.min.css">
-<link rel="stylesheet" href="stylesheets/bootstrap-theme.min.css">
-<script src="javascripts/bootstrap.min.js"></script>
-<!-- Fin bootstrap -->
+  <head>
+    <meta charset="utf-8" />
+    <title>¿Dónde está Carmen San Diego?</title>
+    <link rel="shortcut icon" href="images/iconoCarmenSanDiego.png" type="image/png" />
+    <!-- Bootstrap -->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap-theme.min.css">
+    <script src="javascripts/bootstrap.min.js"></script>
+    <!-- Fin bootstrap -->
+  </head>
 
-</head>
-<body>
-	<!-- Inicio del nav bar -->
-	<div class="container">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
-				<ul class="nav navbar-nav">
-					<li><img id="navbarHeader"
-						src="images/iconoCarmenSanDiego.png"></li>
-					<li class="active"><a href="#">Mapamundi</a></li>
-					<li><a href="#">Expedientes</a></li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-	<!-- Fin del nav bar -->
+  <body>
+    <!-- Inicio del nav bar -->
+    <div class="container">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li><img id="navbarHeader" src="images/iconoCarmenSanDiego.png"></li>
+            <li class="active"><a href="#"wicket:id="linkMapamundi">Mapamundi</a></li>
+            <li><a href="#">Expedientes</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!-- Fin del nav bar -->
 
-	<div class="jumbotron">
-		<h1>Mapamundi</h1>
-	</div>
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="text-center">Mapamundi</h1>
 
+        <form wicket:id="buscarPaisesForm">
 
+          <div>
+            <table class="table table-bordered" border="1" style="width: 60%; margin: 0 auto">
+              <thead>
+                <tr>
+                  <th id="main" class="text-center"><h3>Paises</h3></th>
+                  <th id="main" class="text-center"><h3>Acciones</h3></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr wicket:id="paises">
+                  <td class="text-center"><h4 wicket:id="nombreDelPais" >unNombre</h4></td>
+                  <td>
+                    <div class="btn-group">
+                      <button wicket:id="editar" class="btn-link"><p class="glyphicon glyphicon-pencil"></p></button>
+                      <button wicket:id="eliminar" class="btn-link"><p class="glyphicon glyphicon-trash"></p></button>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <br>
+          <div class="form-actions">
+            <button wicket:id="nuevo" class="btn btn-success center-block">Nuevo Pais</button>
+          </div>
+        </form>
 
-	<div>
-		<form wicket:id="buscarPaisesForm">
-			
-			<div class="form-actions">
-				<button wicket:id="nuevo" class="btn btn-success">Nuevo Pais</button>
-			</div>
-
-			<table class="table table-striped table-bordered table-condensed">
-				<thead>
-					<tr>
-						<th id="main">Paises</th>
-						<th id="main">Acciones</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr wicket:id="paises">
-						<td><span wicket:id="nombreDelPais">unNombre</span></td>
-						<td>
-							<div class="btn-group">
-								<button wicket:id="editar" class="btn-link">
-									<p class="glyphicon glyphicon-pencil"></p>
-								</button>
-								<button wicket:id="eliminar" class="btn-link">
-									<p class="glyphicon glyphicon-trash"></p>
-								</button>
-							</div>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</form>
-
-	</div>
-
-
-</body>
+      </div>
+    </div>
+    
+  </body>
 </html>
