--- a/CarmenSanDiegoWicket/src/main/java/ui/Expedientes.html
+++ b/CarmenSanDiegoWicket/src/main/java/ui/Expedientes.html
@@ -20,8 +20,8 @@
         <div class="container">
           <ul class="nav navbar-nav">
             <li><img id="navbarHeader" src="images/iconoCarmenSanDiego.png"></li>
-            <li class="active"><a href="#"wicket:id="linkMapamundi">Mapamundi</a></li>
-            <li><a href="#"wicket:id="linkExpedientes">Expedientes</a></li>
+            <li><a href="#"wicket:id="linkMapamundi">Mapamundi</a></li>
+            <li class="active"><a href="#"wicket:id="linkExpedientes">Expedientes</a></li>
           </ul>
         </div>
       </nav>
@@ -30,21 +30,21 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1 class="text-center">Mapamundi</h1>
+        <h1 class="text-center">Expedientes</h1>
 
-        <form wicket:id="buscarPaisesForm">
+        <form wicket:id="buscarVillanosForm">
 
           <div>
             <table class="table table-bordered" border="1" style="width: 60%; margin: 0 auto">
               <thead>
                 <tr>
-                  <th id="main" class="text-center"><h3>Paises</h3></th>
+                  <th id="main" class="text-center"><h3>Villanos</h3></th>
                   <th id="main" class="text-center"><h3>Acciones</h3></th>
                 </tr>
               </thead>
               <tbody>
-                <tr wicket:id="paises">
-                  <td class="text-center"><h4 wicket:id="nombreDelPais" >unNombre</h4></td>
+                <tr wicket:id="villanos">
+                  <td class="text-center"><h4 wicket:id="nombre" >unNombre</h4></td>
                   <td>
                     <div class="btn-group">
                       <button wicket:id="editar" class="btn-link"><p class="glyphicon glyphicon-pencil"></p></button>
@@ -57,9 +57,10 @@
           </div>
           <br>
           <div class="form-actions">
-            <button wicket:id="nuevo" class="btn btn-success center-block">Nuevo Pais</button>
+            <button wicket:id="nuevo" class="btn btn-success center-block">Nuevo Villano</button>
           </div>
         </form>
+  
 
       </div>
     </div>
