--- a/CarmenSanDiegoWicket/src/main/java/ui/EditarPais.html
+++ b/CarmenSanDiegoWicket/src/main/java/ui/EditarPais.html
@@ -21,7 +21,8 @@
         <div class="container">
           <ul class="nav navbar-nav">
             <li><img id="navbarHeader" src="images/iconoCarmenSanDiego.png"></li>
-            <li class="active"><a href="#" wicket:id="linkMapamundi">Mapamundi</a></li>
+            <li class="active"><a href="#"wicket:id="linkMapamundi">Mapamundi</a></li>
+            <li><a href="#"wicket:id="linkExpedientes">Expedientes</a></li>
             <li><a href="#">Expedientes</a></li>
           </ul>
         </div>
